==> apache/nuttx/arch/arm/src/xmc4/xmc4_tickless.c <==
#include <nuttx/config.h>
#include <stdint.h>
#include <stdbool.h>
#include <errno.h>
#include <assert.h>
#include <stdio.h>
#include <nuttx/arch.h>
#include <nuttx/irq.h>
#include <debug.h>
#include "arm_internal.h"
#include <arch/board/board.h>
#include "hardware/xmc4_scu.h"
#include "hardware/xmc4_ccu4.h"
#include "xmc4_ccu4.h"

static void xmc4_interval_handler(void *arg)
{
  tmrinfo("Expired...\n");

  /* Stop the timer */

  putreg32(CCU4_CC4_TCCLR_TRBC_MASK, XMC4_CCU41_CC40TCCLR);

  g_tickless.pending = false;
  nxsched_timer_expiration();
}

void up_timer_initialize(void)
{
#ifdef CONFIG_SCHED_TICKLESS_LIMIT_MAX_SLEEP
  uint64_t max_delay;
#endif
  int ret;

  g_tickless.pending = false;
  g_tickless.overflow = 0;
  g_tickless.frequency = USEC_PER_SEC / (uint32_t)CONFIG_USEC_PER_TICK;

  /* Enable CCU clock */

  putreg32(SCU_CLK_CCUC, XMC4_SCU_CLKSET);

  /* Enable CCU clock during sleep */

  putreg32(SCU_SLEEPCR_CCUCR | SCU_SLEEPCR_SYSSEL, XMC4_SCU_SLEEPCR);

  uint32_t divisor;
  uint32_t pssiv;
  ret = xmc4_ccu4_divisor(USEC_PER_SEC / (uint32_t)CONFIG_USEC_PER_TICK,
                          &divisor,
                          &pssiv);
  g_tickless.frequency = BOARD_CCU_FREQUENCY / divisor;
  if (ret < 0)
    {
      tmrerr("ERROR: xmc4_ccu4_divisor failed: %d\n", ret);
      return ret;
    }

  tmrinfo("frequency=%lu, divisor=%lu, cmr=%08lx\n",
          (unsigned long)g_tickless.frequency, (unsigned long)divisor,
          (unsigned long)pssiv);

  /* Initialize Interval Timer
   *
   * Ths timer is configured to be a oneshot timer, that has
   * a resolution that matches the USEC_PER_TICK, and
   * will be started in up_timer_start and uses its period
   * (not compare value) to trigger an interrupt.
   */

  /* Apply reset */

  putreg32(SCU_PR0_CCU41RS, XMC4_SCU_PRSET0);
  putreg32(SCU_PR0_CCU41RS, XMC4_SCU_PRCLR0);

  /* Enable CC40 Slice */

  putreg32(CCU4_GIDLC_CS0I_MASK, XMC4_CCU41_GIDLC);

  /* Enable the prescaler and set value */

  putreg32(CCU4_GIDLC_SPRB_MASK, XMC4_CCU41_GIDLC);
  putreg32(pssiv, XMC4_CCU41_CC40PSC);

#ifdef CONFIG_SCHED_TICKLESS_LIMIT_MAX_SLEEP
  max_delay = (float)UINT16_MAX * USEC_PER_SEC / g_tickless.frequency;
  g_oneshot_maxticks = max_delay / CONFIG_USEC_PER_TICK;
#endif

  /* Enable Single shot mode */

  putreg32(CCU4_CC4_TC_TSSM_MASK, XMC4_CCU41_CC40TC);

  /* Attach the interrupt handler */

  irq_attach(XMC4_IRQ_CCU41_SR0, (xcpt_t)xmc4_interval_handler, NULL);

  /* Enable Interrupt */

  up_enable_irq(XMC4_IRQ_CCU41_SR0);

  /* Initialize Timing Timer
   *
   * This timer is configure to be a freerun timer that
   * has a resolution that matches the USEC_PER_TICK.
   */

  /* Apply reset */

  putreg32(SCU_PR0_CCU40RS, XMC4_SCU_PRSET0);
  putreg32(SCU_PR0_CCU40RS, XMC4_SCU_PRCLR0);

  /* Enable CC40 */

  putreg32(CCU4_GIDLC_CS0I_MASK, XMC4_CCU40_GIDLC);

  /* Enable the prescaler and set value */

  putreg32(CCU4_GIDLC_SPRB_MASK, XMC4_CCU40_GIDLC);
  putreg32(pssiv, XMC4_CCU40_CC40PSC);

  /* Set Period of the timer to max */

  putreg32(UINT16_MAX, XMC4_CCU40_CC40PRS);

  /* Enable Period Match Interrupt */

  putreg32(CCU4_CC4_INTE_PME_MASK, XMC4_CCU40_CC40INTE);
  up_enable_irq(XMC4_IRQ_CCU40_SR0);

  /* Attach the interrupt handler */

  irq_attach(XMC4_IRQ_CCU40_SR0, (xcpt_t)xmc4_timing_handler, NULL);

  /* Enable shadow transfer */

  putreg32(CCU4_GCSS_S0SE_MASK, XMC4_CCU40_GCSS);

  /* Start the timing timer */

  putreg32(CCU4_CC4_TCSET_TRBS_MASK, XMC4_CCU40_CC40TCSET);
}

int up_timer_gettime(struct timespec *ts)
{
  uint64_t usec;
  uint32_t counter;
  uint32_t overflow;
  uint32_t sec;
  irqstate_t flags;

  /* Temporarily disable the overflow counter */

  flags = enter_critical_section();

  counter = getreg32(XMC4_CCU40_CC40TIMER);
  overflow = g_tickless.overflow;

  leave_critical_section(flags);

  usec = (uint64_t)(overflow * UINT16_MAX + counter)
          * USEC_PER_SEC / g_tickless.frequency;
  sec = usec / USEC_PER_SEC;
  ts->tv_sec = sec;
  ts->tv_nsec = (usec - (sec * USEC_PER_SEC)) * NSEC_PER_USEC;

  tmrinfo("usec=%llu ts=(%lu, %lu)\n",
          usec, (unsigned long)ts->tv_sec, (unsigned long)ts->tv_nsec);

  return OK;
}
